--- a/src/components/REST.scss
+++ b/src/components/REST.scss
@@ -15,12 +15,21 @@
 		background: var(--REST-Header-bg-color);
 		border-bottom: 1px solid var(--font-color);
 		
+		h2{
+			font-size: 32px;
+		}
 
 		.themeIcon{
 			display: flex;
 			gap: 10px;
 			align-items: center;
 			color: var(--font-color);
+			svg{
+				font-size: 19px;
+			}
+			p{
+				font-size: 19px;
+			}
 		}
 	}
 
@@ -39,6 +48,7 @@
 			background: var(--REST-GoBack-btn-bg-color);
 			color: var(--font-color);
 			font-size: 15px;
+			line-height: 15px;
 		}
 
 		.dropdown{
@@ -177,10 +187,11 @@
 			width: 100%;
 			display: flex;
 			gap: 140px;
+			align-items: center;
 
 			img{
 				width: auto;
-				min-height: 320px;
+				max-height: 320px;
 			}
 			.infoCtnr{
 				display: flex;
@@ -192,7 +203,7 @@
 
 				h3{
 					color: var(--header-color);
-					font-size: 32px;
+					font-size: 40px;
 					padding-top: 33px;
 				}
 
@@ -202,7 +213,6 @@
 					flex-wrap: wrap;
 					gap: 4px;
 					column-gap: 100px;
-					max-height: 220px;
 					white-space: pre;
 					span{
 						color: var(--header-color);
@@ -222,11 +232,18 @@
 					width: 100%;
 					display: flex;
 					flex-wrap: wrap;
+					flex-direction: column;
 					h2{
 						font-size: 28px;
 						color: var(--header-color);
 						margin-right: 15px;
 						font-weight: 600;
+					}
+					div{
+						margin-top: 20px;
+						display: flex;
+						flex-wrap: wrap;
+						gap: 5px;
 					}
 					.borderBtn{
 						font-size: 18px;
@@ -239,6 +256,8 @@
 						margin-bottom: 15px;
 						background: var(--REST-GoBack-btn-bg-color);
 						color: var(--font-color);
+
+
 					}
 				}
 			}
