--- a/src/components/Responsive.scss
+++ b/src/components/Responsive.scss
@@ -63,15 +63,36 @@
 
             .countryInfo{
                 flex-direction: column;
-                gap: 40px;
+                gap: 30px;
 
                 img{
                     max-width: 90%;
                 }
                 .infoCtnr{
+                    gap: 30px;
                     h3{
                         font-size: 24px;
                         line-height: 25px;
+                    }
+                    .moreInfo{
+                        span{
+                            flex: 14px;
+                            line-height: 15px;
+                            margin-bottom: 2px;
+                        }
+                    }
+                    .borderCtnr{
+                        h2{
+                            font-size: 22px;
+                            line-height: 23px;
+                        }
+                        .borderBtn{
+                            font-size: 14px;
+                            line-height: 13px;
+                            padding: 6px 14px;
+                            margin-right: 6px;
+                            margin-bottom: 7px;
+                        }
                     }
                 }
             }
