--- a/src/components/Responsive.scss
+++ b/src/components/Responsive.scss
@@ -39,10 +39,15 @@
         .countriesCtnr{
             display: flex;
             flex-direction: column;
-
+            padding: 20px 20px;
+            align-items: center;
             
+            a{
+                width: fit-content;
+            }
             .country{
                 height: 250px;
+                width: 200px;
                 img{
                     height: 110px;
                 }
@@ -52,7 +57,9 @@
                 }
                 div{
                     p{
-                        text-wrap: nowrap;
+                        text-wrap: balance;
+                        font-size: 12px;
+                        line-height: 12px;
                     }
                 }
             }
