--- a/src/components/Responsive.scss
+++ b/src/components/Responsive.scss
@@ -77,15 +77,17 @@
                 }
                 .infoCtnr{
                     gap: 30px;
+                    padding-left: 12px;
                     h3{
-                        font-size: 24px;
+                        font-size: 32px;
                         line-height: 25px;
                     }
                     .moreInfo{
                         span{
-                            flex: 14px;
+                            font-size: 14px;
                             line-height: 15px;
-                            margin-bottom: 2px;
+                            margin-bottom: 6px;
+                            text-wrap: nowrap;
                         }
                     }
                     .borderCtnr{
