worked on responsiveness

--- a/src/components/REST.scss
+++ b/src/components/REST.scss
@@ -116,7 +116,7 @@
 		width: 100%;
 		padding: 30px 60px;
 		grid-gap: 22px;
-		grid-gap: 60px;
+		padding-top: 220px;
 		background: var(--REST-Countries-Container-bg-color);
 		color: var(--font-color);
 		font-size: 23px;
