--- a/src/components/Responsive.scss
+++ b/src/components/Responsive.scss
@@ -44,13 +44,14 @@
             flex-direction: column;
             padding: 20px 20px;
             align-items: center;
+            padding-top: 190px;
             
             a{
-                width: fit-content;
+                width: 280px;
             }
             .country{
                 height: 250px;
-                width: 200px;
+                width: 100%;
                 img{
                     height: 110px;
                 }
@@ -70,6 +71,7 @@
         .countryCtnr{
             padding: 40px 15px;
             gap: 40px;
+            padding-top: 200px;
 
             .countryInfo{
                 flex-direction: column;
