--- a/src/components/REST.scss
+++ b/src/components/REST.scss
@@ -8,7 +8,7 @@
 
 	.restHeader{
 		display: flex;
-		padding:25px 60px;
+		padding:13px 60px;
 		font-size: 28px;
 		color: var(--header-color);
 		justify-content: space-between;
@@ -40,12 +40,12 @@
 
 	.searchCtnr {
 		display: flex;
-		padding: 30px 60px;
+		padding: 15px 60px;
 		justify-content: space-between;
 		background: var(--REST-Countries-Container-bg-color);
 		position: fixed;
 		width:100%;
-		top: 99px;
+		top: 75px;
 		z-index:10;
 		.searchInput{
 			width: 400px;
@@ -65,7 +65,8 @@
 			display: flex;
 			align-items: center;
 			gap: 20px;
-			font-size: 16px;
+			font-size: 15px;
+			line-height: 16px;
 			cursor: pointer;
 			border: none;
 			outline: none;
@@ -171,7 +172,7 @@
 		width: 100%;
 		display: flex;
 		flex-direction: column;
-		padding: 80px 60px;
+		padding: 100px 60px;
 		padding-bottom: 0px;
 		gap: 90px;
 
@@ -200,7 +201,7 @@
 
 			img{
 				width: auto;
-				max-height: 320px;
+				max-height: 60%;
 			}
 			.infoCtnr{
 				display: flex;
@@ -271,6 +272,55 @@
 
 					}
 				}
+			}
+		}
+	}
+	.noCountryCtnr{
+		display: flex;
+		width:100vw;
+		flex-direction:column;
+		align-items: center;
+		justify-content: center;
+		color: white;
+		gap:15px;
+		padding-top:100px;
+
+		h1{
+			font-size:38px;
+			padding:10px 15px;
+			color: var(--font-color) ;
+		}
+		span{
+			font-size:25px;
+			color: var(--font-color) ;
+		}
+		.backButton, .borderBtn{
+			width: fit-content;
+			border-radius: 8px;
+			padding: 12px 46px;
+			background: var(--REST-GoBack-btn-bg-color);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 20px;
+			line-height: 15px;
+			color: var(--font-color) ;
+			border : 2px solid var(--font-color);
+			display: flex;
+			gap: 10px;
+			margin-bottom:30px;
+			svg{
+				font-size: 16px;
+			}
+		}
+		.countryDiv{
+			display:flex;
+			gap:15px;
+			flex-wrap:wrap;
+			justify-content:center;
+
+			.borderBtn{
+				margin-bottom:4px;
 			}
 		}
 	}
