worked on typo design

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -21,7 +21,7 @@
     --REST-li-hover: #1b1818;
 }
 *{
-	font-family: 'Mouse Memoirs', sans-serif;
+	font-family: Futura, sans-serif;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
