--- a/src/components/REST.scss
+++ b/src/components/REST.scss
@@ -154,16 +154,19 @@
 				font-size: 24px;
 				color: var(--header-color);
 			}
-			p{
+			span{
 				font-size: 15px;
 				color: var(--font-color);
 				font-weight: lighter;
 				margin-bottom: 2px;
 				text-align: left;
-				padding: 0px 25px;
+				padding-left:20px;
+				display:flex;
+				font-family:Futura;
 
-				span{
-					font-weight: 500;
+				p{
+					font-family:Futura Light Oblique;
+					padding-left:10px;
 				}
 			}
 		}
@@ -232,7 +235,8 @@
 						margin-bottom: 4px;
 	
 						p{
-							font-weight: normal;
+							font-family: Futura Light Oblique;
+							font-weight: lighter;
 							color: var(--font-color);
 							font-size: inherit;
 						}
