--- a/src/components/fonts.css
+++ b/src/components/fonts.css
@@ -16,3 +16,7 @@
     font-family: 'Futura Light ';
     src: local('Futura'),url(./Fonts/futura-lt-cufonfonts/FuturaLT-Light.ttf)  format('truetype');
 }
+@font-face {
+    font-family: 'Futura Condensed Light Oblique';
+    src: local('Futura'),url(./Fonts/futura-lt-cufonfonts/FuturaLT-CondensedLightObl.ttf)  format('truetype');
+}
