--- a/src/components/REST.scss
+++ b/src/components/REST.scss
@@ -47,6 +47,15 @@
 		width:100%;
 		top: 75px;
 		z-index:10;
+		label{
+			display:flex;
+			align-items:center;
+			font-size: 15px;
+			line-height: 15px;
+			background: var(--REST-GoBack-btn-bg-color);
+			color: var(--font-color);
+			padding-left: 20px;
+		}
 		.searchInput{
 			width: 400px;
 			padding: 12px 20px;
@@ -55,8 +64,8 @@
 			border-radius: 8px;
 			background: var(--REST-GoBack-btn-bg-color);
 			color: var(--font-color);
-			font-size: 15px;
-			line-height: 15px;
+			
+
 		}
 
 		.dropdown{
@@ -245,6 +254,7 @@
 				}
 
 				.borderCtnr{
+					margin-top: 60px;
 					width: 100%;
 					display: flex;
 					flex-wrap: wrap;
